# azooKey-Windows

./: .gitignore  AGENTS.md  Makefile.toml  README.md  app-version.json  settings.json
.github/: pull_request_template.md
.github/workflows/: actions.yml
crates/client/: Cargo.toml
crates/client/src/: extension.rs  globals.rs  launcher_control.rs  lib.rs  trace.rs  tracing_chrome.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/shared/: Cargo.toml  build.rs  service.proto  window.proto
crates/shared/src/: default_romaji_table.txt  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: candidate.rs  candidate_scroller.js  data_paths.rs  indicator.rs  ipc.rs  main.rs  ruby.rs  uiaccess.rs  utils.rs
crates/ui/tests/: candidate_scroller.test.cjs
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: ipc.rs  lib.rs  main.rs  server_process.rs  updater.rs
frontend/src/components/: app-sidebar.tsx  debug-settings.tsx
frontend/src/lib/: config-save-controller.d.ts  config-save-controller.js  config.ts
frontend/src/pages/: developer-options.tsx  (+3 more)
frontend/tests/: config-save-controller.test.mjs
installer/: AppVersion.iss  Azookey Startup.xml  Installer.iss
scripts/: sync-version.mjs  test_client_dll_lifecycle.ps1  verify_release_artifact.ps1  vm_build.sh  vm_stage_for_manual_test.sh  vm_test_client_composition.sh  vm_test_updater.sh
server-swift/: Package.resolved  Package.swift
(+27 files in other folders)
